syntax = "proto3";
import "google/protobuf/timestamp.proto";
option java_multiple_files = true;
option java_package = "com.example.auth";

service AuthService {
  rpc auth(AuthRequestDto) returns (AuthResponseDto);
}

message AuthRequestDto {
  string token = 1;
}

message AuthResponseDto {
  string username = 1;
  int64 expiredAt = 2;
}
